# off-ai-experiments-4A

./: .env.example  .gitignore  IMPLEMENTATION.md  OVERVIEW.md  README.md  SETUP.md  create_dev_dataset.py  download_dataset.py  prototype.md  pyproject.toml  requirements.txt  run_api.py  test_all_features.py  test_api.py  test_data_availability.py
client/extension/popup/: popup.css
extension/: DESIGN.md  README.md  RELOAD-GUIDE.md  VISUAL-PREVIEW.md  manifest.json
extension/assets/: README.md
extension/popup/: popup.css  popup.html  popup.js
server/: pyproject.toml
server/src/off_ai/: __init__.py  api.py  data_adapter.py  insight_engine.py  pipeline.py  query_preprocessor.py  recommendation_engine.py
src/off_ai/: __init__.py  __main__.py  api.py  cli.py  constraint_extractor.py  data_adapter.py  intent_parser.py  pipeline.py  post_processor.py  query_builder.py  query_preprocessor.py  semantic_reranker.py  taxonomy_mapper.py
src/off_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_api.py  test_bilingual_consistency.py  test_constraint_layers.py  test_data_adapter.py  test_insight_engine.py  test_intent_parser.py  test_pipeline_ranking.py  test_pipeline_relaxation.py  test_query_preprocessor.py  test_recommendation_engine.py  test_threshold.py
